[package]
name = "jsonparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = "1.0.147"
serde_json = "1.0.87"
thiserror = "1.0"


[lib]
name = "libjsonparser"
path = "src/lib.rs"

[[bin]]
name = "libjsonparser"
path = "src/bin/bin.rs"
